--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -3,34 +3,48 @@
 @tailwind utilities;
 
 body {
-    @apply bg-gray-200;
+  @apply bg-gray-50;
 }
 
 .btn {
-    @apply inline-flex;
-    @apply items-center;
-    @apply justify-center;
-    @apply px-4;
-    @apply py-2;
-    @apply border;
-    @apply border-transparent;
-    @apply text-sm;
-    @apply font-medium;
-    @apply whitespace-nowrap;
-    @apply rounded-md;
-    @apply shadow-sm;
-    @apply text-white;
-    @apply bg-indigo-600;
-    @apply hover:bg-indigo-700;
-    @apply focus:outline-none;
-    @apply focus:ring-2;
-    @apply focus:ring-offset-2;
-    @apply focus:ring-indigo-500;
+  @apply inline-flex;
+  @apply items-center;
+  @apply justify-center;
+  @apply px-4;
+  @apply py-2;
+  @apply border;
+  @apply border-transparent;
+  @apply text-sm;
+  @apply font-medium;
+  @apply whitespace-nowrap;
+  @apply rounded-md;
+  @apply shadow-sm;
+  @apply text-white;
+  @apply bg-indigo-600;
+  @apply hover:bg-indigo-700;
+  @apply focus:outline-none;
+  @apply focus:ring-2;
+  @apply focus:ring-offset-2;
+  @apply focus:ring-indigo-500;
+}
+
+.baseForm {
+  @apply bg-gray-50;
+  @apply border;
+  @apply border-gray-300;
+  @apply text-gray-900;
+  @apply text-sm;
+  @apply rounded-lg;
+  @apply focus:ring-blue-500;
+  @apply focus:border-blue-500;
+  @apply block;
+  @apply w-full;
+  @apply py-1.5;
+  @apply px-2;
 }
 
 .popupContainer {
-    min-width: 300px;
-    min-height: 300px;
-    display: flex;
+  min-width: 450px;
+  min-height: 400px;
+  display: flex;
 }
-
